--- a/TUNIBrain/static/chatbot_UI_tyyli.css
+++ b/TUNIBrain/static/chatbot_UI_tyyli.css
@@ -1,8 +1,16 @@
+/*
+TUNI-väri: rgb(78, 0, 142)
+*/
+html
+{
+	scroll-behavior: smooth;
+}
+
 #chatbot_frame 
 {
 	max-width: 500px;
 	max-height: 580px;
-	border: 2px solid #C4CACA;
+	border: 2px solid rgb(78, 0, 142);
 	border-radius: 5px;
 	margin: auto;
 }
@@ -12,13 +20,15 @@
 	display: block;
 	width: 100%;
 	height: 47px;
-	border-bottom: 3px solid #C4CACA;
+	border-bottom: 3px solid rgb(78, 0, 142);
 	/*background-color: rgb(78, 0, 142);*/
 }
 
 #banner_text
 {
 	text-align: center;
+	font-size: 20px;
+	font-family: "Open Sans", sans-serif;
 }
 
 #chatbot_contentpane
@@ -28,6 +38,7 @@
 	display: block;
 	width: 100%;
 	height: 380px;
+	scroll-behavior: smooth;
 }
 
 #textfield_frame
@@ -35,7 +46,7 @@
 	display: block;
 	height: 40px;
 	padding: 0px 5px 0px 5px;
-	border-top: 3px solid #C4CACA;
+	border-top: 3px solid rgb(78, 0, 142);
 	
 }
 
@@ -45,7 +56,7 @@
 	width: 420px;
 	height: 40px;
 	font-size: 16px;
-	font-family: courier;
+	font-family: "Open Sans", sans-serif;
 
 }
 
@@ -63,15 +74,20 @@
 
 tr:nth-child(even)
 {
-	background-color: #E0D8FD/*#94ABE5*/;
-	color: #7659E5;
+	background-color: rgb(78, 0, 142);
+	color: white;
 	width: 100%;
+}
+
+tr:nth-child(odd)
+{
+	
 }
 
 td
 {
 	padding: 10px 10px 10px 10px;
 	width: 100%;
-	font-family: courier;
+	font-family: "Open Sans", sans-serif;
 	word-break: break-all;
 }
