--- a/TUNIBrain/static/chatbot_UI_tyyli.css
+++ b/TUNIBrain/static/chatbot_UI_tyyli.css
@@ -1,6 +1,7 @@
 /*
 TUNI-väri: rgb(78, 0, 142)
 */
+
 html
 {
 	scroll-behavior: smooth;
@@ -13,6 +14,8 @@ html
 	border: 2px solid rgb(78, 0, 142);
 	border-radius: 5px;
 	margin: auto;
+	display: none;
+	z-index: 1;
 }
 
 #banner
